--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,16 @@
 
 .button-container.top,
 .button-container.bottom {
+  width: 400px;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .button-container.left,
 .button-container.right {
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 16rem;
 }
 
 .button-container button {
